==> nuochka/stm32-projects/07_SPI_TFT/Core/Src/lcd.c <==
/*
 * lcd.c
 *
 * Created on: May 25, 2026
 * Author: anastasiiakovalenko
 */

#include "lcd.h"
#include "spi.h"

#define LCD_OFFSET_X 1
#define LCD_OFFSET_Y 2

#define CMD(x) ((x) | 0x100)

static const uint16_t init_table[] = {
  CMD(ST7735S_FRMCTR1), 0x01, 0x2c, 0x2d,
  CMD(ST7735S_FRMCTR2), 0x01, 0x2c, 0x2d,
  CMD(ST7735S_FRMCTR3), 0x01, 0x2c, 0x2d, 0x01, 0x2c, 0x2d,
  CMD(ST7735S_INVCTR), 0x07,
  CMD(ST7735S_PWCTR1), 0xa2, 0x02, 0x84,
  CMD(ST7735S_PWCTR2), 0xc5,
  CMD(ST7735S_PWCTR3), 0x0a, 0x00,
  CMD(ST7735S_PWCTR4), 0x8a, 0x2a,
  CMD(ST7735S_PWCTR5), 0x8a, 0xee,
  CMD(ST7735S_VMCTR1), 0x0e,
  CMD(ST7735S_GAMCTRP1), 0x0f, 0x1a, 0x0f, 0x18, 0x2f, 0x28, 0x20, 0x22,
                         0x1f, 0x1b, 0x23, 0x37, 0x00, 0x07, 0x02, 0x10,
  CMD(ST7735S_GAMCTRN1), 0x0f, 0x1b, 0x0f, 0x17, 0x33, 0x2c, 0x29, 0x2e,
                         0x30, 0x30, 0x39, 0x3f, 0x00, 0x07, 0x03, 0x10,
  CMD(0xf0), 0x01,
  CMD(0xf6), 0x00,
  CMD(ST7735S_COLMOD), 0x05,
  CMD(ST7735S_MADCTL), 0xa0,
};

static void lcd_cmd(uint8_t cmd){
	HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_RESET);
	HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&hspi2, &cmd, 1, HAL_MAX_DELAY);
	HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_SET);
}

static void lcd_data(uint8_t data){
	HAL_GPIO_WritePin(LCD_DC_GPIO_Port, LCD_DC_Pin, GPIO_PIN_SET);
	HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_RESET);
	HAL_SPI_Transmit(&hspi2, &data, 1, HAL_MAX_DELAY);
	HAL_GPIO_WritePin(LCD_CS_GPIO_Port, LCD_CS_Pin, GPIO_PIN_SET);
}

static void lcd_send(uint16_t value){
	if(value & 0x100) {
		lcd_cmd(value);
	} else {
		lcd_data(value);
	}
}

static void lcd_data16(uint16_t value){
	lcd_data(value >> 8);
	lcd_data(value);
}

static void lcd_set_window(int x, int y, int width, int height){
	lcd_cmd(ST7735S_CASET);
	lcd_data16(LCD_OFFSET_X + x);
	lcd_data16(LCD_OFFSET_X + x + width - 1);

	lcd_cmd(ST7735S_RASET);
	lcd_data16(LCD_OFFSET_Y + y);
	lcd_data16(LCD_OFFSET_Y + y + height - 1);
}

void lcd_init(void){
	HAL_GPIO_WritePin(LCD_RST_GPIO_Port, LCD_RST_Pin, GPIO_PIN_RESET);
	HAL_Delay(100);
	HAL_GPIO_WritePin(LCD_RST_GPIO_Port, LCD_RST_Pin, GPIO_PIN_SET);
	HAL_Delay(100);

	for(int i = 0; i < sizeof(init_table) / sizeof(uint16_t); i++){
		lcd_send(init_table[i]);
	}

	HAL_Delay(200);
	lcd_cmd(ST7735S_SLPOUT);
	HAL_Delay(120);
	lcd_cmd(ST7735S_DISPON);
}

void lcd_fill_box(int x, int y, int width, int height, uint16_t color){
	lcd_set_window(x, y, width, height);

	lcd_cmd(ST7735S_RAMWR);
	for(int i = 0; i < width * height; i++){
		lcd_data16(color);
	}
}

void lcd_put_pixel(int x, int y, uint16_t color){
	lcd_fill_box(x, y, 1, 1, color);
}

void lcd_draw_image(int x, int y, int width, int height, const uint8_t* data){
	lcd_set_window(x, y, width, height);
	lcd_cmd(ST7735S_RAMWR);
	for(int i = 0; i < width * height; i++){
			lcd_data16(data[i]);
		}
}

void lcd_draw_rgba_image(int x, int y, int width, int height, const uint16_t* image_data) {
	lcd_set_window(x, y, width, height);

	    lcd_cmd(ST7735S_RAMWR);

	    int total_pixels = width * height;

	    for(int i = 0; i < total_pixels; i++) {
	        uint16_t pixel = image_data[i];

	        uint8_t byte1 = (pixel >> 8) & 0xFF;
	        uint8_t byte2 = pixel & 0xFF;

	        lcd_data(byte1);
	        lcd_data(byte2);
	    }
}
